@@ -17,6 +17,7 @@ tickit_term_input_wait_tv.3 = tickit_term_input_wait_msec.3
 tickit_term_await_started_tv.3 = tickit_term_await_started_msec.3
 tickit_term_emit_mouse.3 = tickit_term_emit_key.3
 tickit_term_lookup_ctl.3 = tickit_term_ctlname.3
+tickit_term_resume.3 = tickit_term_pause.3
 
 tickit_pen_new_attrs.3 = tickit_pen_new.3
 tickit_pen_clone.3 = tickit_pen_new.3
