@@ -1,3 +1,6 @@
+TODO
+  * Added tickit_term_pause(3), tickit_term_resume(3)
+
 2017-11-30 01:21  0.2-beta1
   * Added tickit_window_{is,set}_steal_focus(3)
   * Added entire toplevel Tickit instance
